<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Receta" android:background="@drawable/receta8">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNombreReceta" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/edit_nombrereceta" android:background="@android:color/background_light"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText9"
            android:hint="@string/edit_Pendiente"/>
    <TextView
            android:layout_width="103dp"
            android:layout_height="26dp"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:layout_marginTop="12dp" android:textColor="@android:color/background_dark"
            android:text="@string/txt_Ingredientes" android:background="@drawable/receta8"/>
    <TextView
            android:layout_width="106dp"
            android:layout_height="24dp"
            android:id="@+id/textViewProcedimiento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:text="@string/txt_Preparacion"/>
    <TextView
            android:text="Crear Receta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="@android:color/background_dark" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_subirImgaen"
            android:layout_width="126dp"
            android:layout_height="41dp"
            android:id="@+id/button7" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/editTextNombreReceta"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/background_light"
            android:background="@color/colorAccent"/>
    <EditText
            android:layout_width="363dp"
            android:layout_height="90dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/edit_Preparacion"
            android:background="@android:color/background_light"/>
    <EditText
            android:layout_width="206dp"
            android:layout_height="125dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewProcedimiento"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="106dp"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/edit_Preparacion"
            android:background="@android:color/background_light" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.097"/>
    <Button
            android:text="@string/button_subir_Imagen1"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:id="@+id/button10"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/editText7"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:textColor="@android:color/background_light" android:background="@color/colorAccent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.036"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText9" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/edit_ciudad_Provincia"/>
    <TextView
            android:layout_width="231dp"
            android:layout_height="27dp"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:text="@string/text_tradicional"
            app:layout_constraintEnd_toStartOf="@+id/radioButton" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button7"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombreReceta" android:hint="@string/radio_button_si"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombreReceta" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/radioButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:hint="@string/radio_button_No"/>
</androidx.constraintlayout.widget.ConstraintLayout>