<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Principal" android:background="@drawable/logo2">
    <TextView
            android:text="Elija Opcion a Realizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@android:color/background_dark" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_crearre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textColor="@android:color/background_light"
            android:background="@color/colorAccent" android:onClick="onclickCrearReceta"/>
    <Button
            android:text="@string/button_consultarTodosmenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@android:color/background_light" android:background="@color/colorAccent"
            android:layout_marginTop="32dp" android:onClick="onclickConsultarReceta"/>
    <Button
            android:text="@string/button_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"
            android:textColor="@android:color/background_light" android:background="@color/colorAccent"
            android:onClick="onclickVerPerfil" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>